# Unit-Testing-Practice

./: CMakeLists.txt  README.md  triangle.cpp  triangle.h  triangleTest.cpp
